Add react-datetime pickers to set start/end times.

--- a/webui/src/main/resources/static/built/index.html
+++ b/webui/src/main/resources/static/built/index.html
@@ -26,8 +26,9 @@
 
     <script type="text/javascript" src="https://localhost:8001/webjars/typeahead.js/0.11.1/dist/typeahead.bundle.min.js"></script>
 
-    <link href="https://localhost:8001/st/my.css" rel="stylesheet" type="text/css" />
     <link href="https://localhost:8001/st/vis/vis.css" rel="stylesheet" type="text/css" />
+    <link href="https://localhost:8001/st/react-datetime.css" rel="stylesheet" type="text/css"/>
+    <link href="https://localhost:8001/st/my.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
