--- a/webui/src/main/resources/static/built/index.html
+++ b/webui/src/main/resources/static/built/index.html
@@ -29,6 +29,7 @@
     <link href="https://localhost:8001/st/vis/vis.css" rel="stylesheet" type="text/css" />
     <link href="https://localhost:8001/st/react-datetime.css" rel="stylesheet" type="text/css"/>
     <link href="https://localhost:8001/st/my.css" rel="stylesheet" type="text/css" />
+    <link href="https://localhost:8001/st/react-dropdown.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
